k8s/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: c2-app
  labels:
    app.kubernetes.io/part-of: c2-app
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
